2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(actionPerformed): Changed to update list with all 
	selected intervals, and to use fileTablePanel instead.
	(actionPerformed): Likewise.
	(propertyChange): Changed to use addSelectionInterval
	instead of setSelectionInterval.
	(uninstallComponents): Uninstalled fileTablePanel.
	(installListeners): Moved code to createList, so listeners
	are installed for every list that may be created.
	(createList): Added code to remove and install listeners on
	list.
	(createDetailsView): Changed to use own panel. Also, added
	code to set the selection mode.

2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(mouseClicked): Fixed checks to prevent NPE.

2005-11-29  Lillian Angel  <langel@redhat.com>

	* javax/swing/JViewport.java
	(setView): Added check to prevent NPE.
	* javax/swing/plaf/basic/BasicFileChooserUI.java
	(ListLabelRenderer): Removed class, never used.
	* javax/swing/plaf/metal/MetalFileChooserUI.java
	(DetailTableModel): Removed, not needed.
	(TableFileRenderer): Implemented to override some color
	and icon defaults in the default table renderer.
	(actionPerformed): Set selection in list, if something was
	selected in the table.
	(actionPerformed): Set selection in table, if something was
	selected in the list.
	(propertyChange): Added code to set the selection for the table, 
	as well as the list. This depends on what view we are in.
	(editFile): Fixed to call scrollRectToVisible instead.
	(TableClickListener): Implemented new private class to take
	care of double clicking (changing/opening directories/files)
	and single clicking (editing).
	(TableClickListener.mouseClicked): Implemented
	(TableClickListener.editFile): Implemented
	(TableClickListener.completeEditing): Implemented
	(TableClickListener.EditingActionListener): Implemented
	(TableClickListener.closeDialog): Implemented